test/org/midica/testfiles/failing/global-timesig-invalid.midica
INCLUDE inc/instruments.midica

* time 3:4

0 c /4
